--- a/css/user_login_style.css
+++ b/css/user_login_style.css
@@ -23,11 +23,10 @@
   -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.7);
   -moz-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.7);
   box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.7);
-  max-width: 320px;
+  max-width: 350px;
   text-align: center;
   margin-top: 40px;
   margin-bottom: 40px
-
 
 }
 
@@ -65,13 +64,13 @@ p {
   height: 50px;
 }
 
-#login form input[type="text"], input[type="password"] {
+#login form input[type="text"], input[type="password"],input[type="Number"] {
   background-color: #3b4148;
   border-radius: 0px 3px 3px 0px;
   color: #606468;
   margin-bottom: 1em;
   padding: 0 16px;
-  width: 230px;
+  width: 260px;
 }
 
 #login form input[type="submit"] {
@@ -92,7 +91,8 @@ p {
 
 #login > p {
   text-align: center;
-  color: #fff
+  color: #161e2c;
+  font-weight: bold;  
 }
 
 #login > p span {
@@ -100,13 +100,16 @@ p {
 }
 
 #login a{
-  color:#fff 
+  color:#161e2c
 }
 
 #login h2{
   text-align: center;
-  color: #fff;
+  color: #161e2c;
   padding:10px;
+  font-weight: bold;
+
+  
 }
 
 .social_fb i{
@@ -152,3 +155,4 @@ p {
 .user_add_group_detail p{
   color: #000
 }
+
